--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-fast-marquee": "^1.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "5.0.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
@@ -48,6 +47,7 @@
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^9.0.7"
+    "@types/uuid": "^9.0.7",
+    "react-scripts": "^5.0.1"
   }
 }
